# netcoredbg

./: .travis.yml  CMakeLists.txt  fetchdeps.cmake
packaging/: netcoredbg.spec
src/debug/netcoredbg/: CMakeLists.txt
